--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
+html, body, .App, #root {
+  height: 100%;
+}
+
+h1 {
+  text-decoration: underline;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+}
+
+.name {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.posts {
+  width: 80%;
+  margin: 1rem auto;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post {
+  border: 2px solid black;
+  margin: 1rem 0;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+.return {
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
+.return:hover {
+  font-weight: bold;
+}
+
+.user {
+  cursor: pointer;
+  font-size: x-large;
+  margin: 0.5rem 0;
+}
+
+.user:hover {
+  font-weight: bold;
+}
+
+.users {
+  border: 2px solid black;
+  width: 80%;
+  padding: 1rem 0;
+  margin: auto;
+  border-radius: 10px;
 }
